--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ border-radius: 12px;
 
 <div id="gif">
 <h2>You had no choice 😈</h2>
-<img src="https://media.giphy.com/media/10MYt5jPR6QX5pnqM/giphy.gif" alt="Funny Gif">
+<img src="valentine.gif" alt="Funny Gif">
 </div>
 </div>
 
