--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ border-radius: 12px;
 
 <div id="gif">
 <h2>You had no choice 😈</h2>
-<img src="valentine.gif" alt="Funny Gif">
+<img src="valentine.gif.mp4" alt="Funny Gif">
 </div>
 </div>
 
