--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ border-radius: 12px;
 
 <body>
 <div class="box">
-<h1>Will you be my Valentine? 💖</h1>
+<h1>Will you be my Valentine Aamina? 💖</h1>
 
 <div class="buttons">
 <button id="yes">Yes</button>
@@ -76,8 +76,7 @@ border-radius: 12px;
 </div>
 
 <div id="gif">
-<h2>You had no choice 😈</h2>
-<img src="valentine.gif.mp4" alt="Funny Gif">
+<h2>You had no choice 😈, Glad you finally said YES!</h2>
 </div>
 </div>
 
