--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ border-radius: 12px;
 </div>
 
 <div id="gif">
-<h2>You had no choice 😈, Glad you finally said YES!</h2>
+<h2>You had no choice 😈, Glad you finally said YES! I LOVE YOU MORE BABY</h2>
 </div>
 </div>
 
